# canaima

./: README.md  actualizar.sh  crontab.txt
amigo/: amigu_0.7.6-2.dsc  amigu_0.7.6-2_i386.changes  amigu_0.7.6-2_i386.deb
amigo/amigu-0.7.6/: .gitignore  Makefile  amigu.desktop  setup.py
amigo/amigu-0.7.6/.pc/00-renombrar-canaima/: amigu.desktop
amigo/amigu-0.7.6/.pc/Yenmar-Conde/amigu/gui/: amigugtk.py
amigo/amigu-0.7.6/amigu/gui/: amigugtk.py
amigo/amigu-0.7.6/debian/: README.source  amigu.postinst.debhelper  amigu.prerm.debhelper  amigu.substvars  changelog  control  files  rules
amigo/amigu-0.7.6/debian/amigu/DEBIAN/: control  md5sums  postinst  prerm
amigo/amigu-0.7.6/debian/amigu/usr/lib/python2.6/dist-packages/amigu/apps/: base.py
amigo/amigu-0.7.6/debian/amigu/usr/lib/python2.6/dist-packages/amigu/apps/win/: __init__.py
amigo/amigu-0.7.6/debian/amigu/usr/lib/python2.6/dist-packages/amigu/apps/win/mail/: base.py
amigo/amigu-0.7.6/debian/amigu/usr/lib/python2.6/dist-packages/amigu/apps/win/messenger/: __init__.py  live.py
amigo/amigu-0.7.6/debian/amigu/usr/lib/python2.6/dist-packages/amigu/apps/win/settings/: __init__.py  misc.py
amigo/amigu-0.7.6/debian/amigu/usr/lib/python2.6/dist-packages/amigu/apps/win/webbrowser/: opera.py
amigo/amigu-0.7.6/debian/amigu/usr/lib/python2.6/dist-packages/amigu/computer/users/: base.py  mswin.py
amigo/amigu-0.7.6/debian/amigu/usr/lib/python2.6/dist-packages/amigu/util/: folder.py
amigo/amigu-0.7.6/debian/amigu/usr/lib/python2.7/dist-packages/: amigu-0.7.6.egg-info
amigo/amigu-0.7.6/debian/amigu/usr/lib/python2.7/dist-packages/amigu/: __init__.py
amigo/amigu-0.7.6/debian/amigu/usr/lib/python2.7/dist-packages/amigu/apps/: __init__.py
amigo/amigu-0.7.6/debian/amigu/usr/lib/python2.7/dist-packages/amigu/apps/lnx/: __init__.py
amigo/amigu-0.7.6/debian/amigu/usr/lib/python2.7/dist-packages/amigu/apps/mac/: __init__.py
amigo/amigu-0.7.6/debian/amigu/usr/lib/python2.7/dist-packages/amigu/apps/win/mail/: __init__.py  livemail.py  outlook.py  thunderbird.py
amigo/amigu-0.7.6/debian/amigu/usr/lib/python2.7/dist-packages/amigu/apps/win/messenger/: base.py  gtalk.py
amigo/amigu-0.7.6/debian/amigu/usr/lib/python2.7/dist-packages/amigu/apps/win/settings/: addressbook.py  emule.py  planner.py
amigo/amigu-0.7.6/debian/amigu/usr/lib/python2.7/dist-packages/amigu/apps/win/webbrowser/: __init__.py  base.py  chrome.py  explorer.py  firefox.py
amigo/amigu-0.7.6/debian/amigu/usr/lib/python2.7/dist-packages/amigu/computer/: __init__.py  info.py
amigo/amigu-0.7.6/debian/amigu/usr/lib/python2.7/dist-packages/amigu/computer/users/: __init__.py  macos.py  openos.py
amigo/amigu-0.7.6/debian/amigu/usr/lib/python2.7/dist-packages/amigu/gui/: __init__.py  amigugtk.py
amigo/amigu-0.7.6/debian/amigu/usr/lib/python2.7/dist-packages/amigu/util/: __init__.py  winreg.py
amigo/amigu-0.7.6/debian/amigu/usr/share/doc/amigu/: copyright
amigo/amigu-0.7.6/debian/amigu/usr/share/pyshared/: amigu-0.7.6.egg-info
amigo/amigu-0.7.6/debian/patches/: 00-renombrar-canaima  01-genera-makefile  02-no-usar-gksudo.patch  Yenmar-Conde  series
amigo/amigu-0.7.6/imagenes/: cab_amigu.xcf  icon_paginacion.xcf
bienvenidos/: canaima-bienvenido-gnome_4.7.dsc  canaima-bienvenido-gnome_4.7_all.deb  canaima-bienvenido-gnome_4.7_i386.changes
bienvenidos/canaima-bienvenido-gnome-4.7/debian/canaima-bienvenido-gnome/DEBIAN/: md5sums
bienvenidos/canaima-bienvenido-gnome-4.7/debian/canaima-bienvenido-gnome/usr/share/canaima-bienvenido-gnome/data/shell/: 02.html
bienvenidos/canaima-bienvenido-gnome-4.7/debian/patches/: yenmar-conde
bienvenidos/canaima-bienvenido-gnome-4.7/gui/data/shell/: 01.html
bmon/: bmon_2.0.1-3.dsc  bmon_2.0.1-3_i386.changes  bmon_2.0.1-3_i386.deb
bmon/bmon-2.0.1/: ChangeLog  Makefile.opts  Makefile.opts.in  config.status  configure  configure.in
bmon/bmon-2.0.1/debian/: bmon.install  bmon.substvars  changelog  control  files  rules
bmon/bmon-2.0.1/debian/bmon/DEBIAN/: control  md5sums
bmon/bmon-2.0.1/include/bmon/: bindings.h  bmon.h  compile-fixes.h  conf.h  config.h  defs.h  defs.h.in  distribution.h  graph.h  input.h  intf.h  node.h  output.h  signal.h  utils.h
bmon/bmon-2.0.1/man/: bmon.1
bmon/bmon-2.0.1/src/: GNUmakefile  bindings.c  bmon  bmon.c  conf.c  graph.c  in_distribution.c  in_dummy.c  in_kstat.c  in_netlink.c  in_netstat.c  in_null.c  in_proc.c  in_sysfs.c  input.c  intf.c  node.c  out_ascii.c  out_curses.c  out_distribution.c  out_html.c  out_null.c  output.c  signal.c  utils.c
bmon/bmon-2.0.1/src/.deps/: bindings.d  bmon.d  conf.d  graph.d  in_distribution.d  in_dummy.d  in_kstat.d  in_netlink.d  in_netstat.d  in_null.d  in_proc.d  in_sysctl.d  in_sysfs.d  input.d  intf.d  node.d  out_ascii.d  out_curses.d  out_distribution.d  out_html.d  out_null.d  output.d  signal.d  utils.d
sl/: busqueda.txt  sl_3.03-17.dsc  sl_3.03-17_i386.changes  sl_3.03-17_i386.deb
sl/sl-3.03/: sl  sl.h
sl/sl-3.03/debian/patches/: Yenmar-Conde  series
sl/sl-3.03/debian/sl/DEBIAN/: md5sums
sl/sl-3.03/debian/sl/usr/games/: sl
